add link footer

--- a/index.html
+++ b/index.html
@@ -187,30 +187,30 @@
       </main>
       <footer>
         <div>
-          <ul>
-            <li class="titre"><h3>Contacts</h3></li>
-            <li><p>congres@issoudun.fr</p></li>
-            <li><p>Fax: 0254033267</p></li>
-            <li><p>Tel: +33 2 54 03 32 61</p></li>
-            <li><p>Centre de Congrès "Champs Élysées"</p></li>
-            <li><p>Boulevard Roosevelt</p></li>
-            <li><p>BP 150</p></li>
-            <li><p>36105 Issoudun</p></li>
-          </ul>
+            <ul>
+                <li class="titre"><h3>Contacts</h3></li>
+                <li><p>congres@issoudun.fr</p></li>
+                <li><p>Fax: 0254033267</p></li>
+                <li><p>Tel: +33 2 54 03 32 61</p></li>
+                <li><p>Centre de Congrès "Champs Élysées"</p></li>
+                <li><p>Boulevard Roosevelt</p></li>
+                <li><p>BP 150</p></li>
+                <li><p>36105 Issoudun</p></li>
+            </ul>
         </div>
         <div>
-          <ul>
-            <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
-            <li><a href="#">Bip TV</a></li>
-            <li><a href="#">Centre culturel Albert Camus</a></li>
-            <li><a href="#">Musée de l'hospice Saint Roch</a></li>
-            <li><a href="#">Ville d'Issoudun</a></li>
-          </ul>
+            <ul>
+                <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+                <li><a href="https://www.biptv.tv/">Bip TV</a></li>
+                <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+                <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+                <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
+            </ul>
         </div>
         <div>
-          <ul>
-            <li><h3><a class="titre" href="#">Mentions légales</a></h3></li>
-          </ul>
+            <ul>
+                <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+            </ul>
         </div>
       </footer>
       <script src="scripts/nav.js"></script>
