--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -69,7 +69,7 @@
                 <p>
                   765
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- TAILLE -->
             <div class="specs">
@@ -80,7 +80,7 @@
                 <p>
                   775 mètres carrés (Scène : 8 x 5 x 0,8 mètres)
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- SCÈNE -->
             <div class="specs">
@@ -91,7 +91,7 @@
                 <p>
                   Scène : 8 x 5 x 0,8 mètres
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- CUISINE -->
             <div class="specs">
@@ -102,7 +102,7 @@
                 <p>
                   Cuisines professionnelles
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- WIFI -->
             <div class="specs">
@@ -148,11 +148,36 @@
             <a href="/pages/book.html">RÉSERVEZ</a>
           </div>
         </div>
-      </div>  
+      </div>
     </main>
     <footer>
-
+      <div>
+          <ul>
+              <li class="titre"><h3>Contacts</h3></li>
+              <li><p>congres@issoudun.fr</p></li>
+              <li><p>Fax: 0254033267</p></li>
+              <li><p>Tel: +33 2 54 03 32 61</p></li>
+              <li><p>Centre de Congrès "Champs Élysées"</p></li>
+              <li><p>Boulevard Roosevelt</p></li>
+              <li><p>BP 150</p></li>
+              <li><p>36105 Issoudun</p></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+              <li><a href="https://www.biptv.tv/">Bip TV</a></li>
+              <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+              <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+              <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+          </ul>
+      </div>
     </footer>
-    <script src="../scripts/slider.js"></script> 
+    <script src="../scripts/slider.js"></script>
   </body>
 </html>
