--- a/pages/book.html
+++ b/pages/book.html
@@ -161,10 +161,10 @@
       <div>
           <ul>
               <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
-              <li><a href="#">Bip TV</a></li>
-              <li><a href="#">Centre culturel Albert Camus</a></li>
-              <li><a href="#">Musée de l'hospice Saint Roch</a></li>
-              <li><a href="#">Ville d'Issoudun</a></li>
+              <li><a href="https://www.biptv.tv/">Bip TV</a></li>
+              <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+              <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+              <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
           </ul>
       </div>
       <div>
