--- a/pages/EspaceNumerique.html
+++ b/pages/EspaceNumerique.html
@@ -44,7 +44,7 @@
             <button id="nextBtn"></button>
             <div class="carousel-slide">
                 <img src="../images/EspaceNumerique/epn4.jpg" id="lastClone" alt="Espace Numérique"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
-                <img src="../images/EspaceNumerique/epn1.jpg" alt="Espace Numérique"> 
+                <img src="../images/EspaceNumerique/epn1.jpg" alt="Espace Numérique">
                 <img src="../images/EspaceNumerique/epn2.jpg" alt="Espace Numérique">
                 <img src="../images/EspaceNumerique/epn3.jpg" alt="Espace Numérique"> <!-- Ne pas oublier de changer SRC enfonction de la position de ce fichier et du dossier de référence -->
                 <img src="../images/EspaceNumerique/epn4.jpg" alt="Espace Numérique">
@@ -65,7 +65,7 @@
                 <p>
                   Internet haut débit
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- ORDINATEURS -->
             <div class="specs">
@@ -76,7 +76,7 @@
                 <p>
                   15 ordinateurs
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- WIFI -->
             <div class="specs">
@@ -111,11 +111,36 @@
             <a href="/pages/book.html">RÉSERVEZ</a>
           </div>
         </div>
-      </div>  
+      </div>
     </main>
     <footer>
-
+      <div>
+          <ul>
+              <li class="titre"><h3>Contacts</h3></li>
+              <li><p>congres@issoudun.fr</p></li>
+              <li><p>Fax: 0254033267</p></li>
+              <li><p>Tel: +33 2 54 03 32 61</p></li>
+              <li><p>Centre de Congrès "Champs Élysées"</p></li>
+              <li><p>Boulevard Roosevelt</p></li>
+              <li><p>BP 150</p></li>
+              <li><p>36105 Issoudun</p></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+              <li><a href="https://www.biptv.tv/">Bip TV</a></li>
+              <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+              <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+              <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+          </ul>
+      </div>
     </footer>
-    <script src="../scripts/slider.js"></script> 
+    <script src="../scripts/slider.js"></script>
   </body>
 </html>
