--- a/pages/HallDaccueil.html
+++ b/pages/HallDaccueil.html
@@ -44,7 +44,7 @@
             <button id="nextBtn"></button>
             <div class="carousel-slide">
                 <img src="../images/hall/hall9.jpg" id="lastClone" alt="Hall d'Accueil"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
-                <img src="../images/hall/hall1.jpg" alt="Hall d'Accueil"> 
+                <img src="../images/hall/hall1.jpg" alt="Hall d'Accueil">
                 <img src="../images/hall/hall2.jpg" alt="Hall d'Accueil">
                 <img src="../images/hall/hall3.JPG" alt="Hall d'Accueil"> <!-- Ne pas oublier de changer SRC enfonction de la position de ce fichier et du dossier de référence -->
                 <img src="../images/hall/hall4.JPG" alt="Hall d'Accueil">
@@ -69,7 +69,7 @@
                 <p>
                     315 mètres carrés
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- LUMIÈRE -->
             <div class="specs">
@@ -80,7 +80,7 @@
                 <p>
                     Lumière naturelle
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- WIFI -->
             <div class="specs">
@@ -106,11 +106,36 @@
             <a href="/pages/book.html">RÉSERVEZ</a>
           </div>
         </div>
-      </div>  
+      </div>
     </main>
     <footer>
-
+      <div>
+          <ul>
+              <li class="titre"><h3>Contacts</h3></li>
+              <li><p>congres@issoudun.fr</p></li>
+              <li><p>Fax: 0254033267</p></li>
+              <li><p>Tel: +33 2 54 03 32 61</p></li>
+              <li><p>Centre de Congrès "Champs Élysées"</p></li>
+              <li><p>Boulevard Roosevelt</p></li>
+              <li><p>BP 150</p></li>
+              <li><p>36105 Issoudun</p></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+              <li><a href="https://www.biptv.tv/">Bip TV</a></li>
+              <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+              <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+              <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+          </ul>
+      </div>
     </footer>
-    <script src="../scripts/slider.js"></script> 
+    <script src="../scripts/slider.js"></script>
   </body>
 </html>
