--- a/pages/SalleDeReunion.html
+++ b/pages/SalleDeReunion.html
@@ -44,7 +44,7 @@
             <button id="nextBtn"></button>
             <div class="carousel-slide">
                 <img src="../images/SallesDeReunion/reunion6.jpg" id="lastClone" alt="Salle de réunion"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
-                <img src="../images/SallesDeReunion/reunion1.jpg" alt="Salle de réunion"> 
+                <img src="../images/SallesDeReunion/reunion1.jpg" alt="Salle de réunion">
                 <img src="../images/SallesDeReunion/reunion2.jpg" alt="Salle de réunion">
                 <img src="../images/SallesDeReunion/reunion3.jpg" alt="Salle de réunion"> <!-- Ne pas oublier de changer SRC enfonction de la position de ce fichier et du dossier de référence -->
                 <img src="../images/SallesDeReunion/reunion4.jpg" alt="Salle de réunion">
@@ -66,7 +66,7 @@
                 <p>
                   20 ou 50
                 </p>
-              </div> 
+              </div>
             </div>
             <div class="specs">
               <div class="objects">
@@ -99,11 +99,36 @@
             <a href="/pages/book.html">RÉSERVEZ</a>
           </div>
         </div>
-      </div>  
+      </div>
     </main>
     <footer>
-
+      <div>
+          <ul>
+              <li class="titre"><h3>Contacts</h3></li>
+              <li><p>congres@issoudun.fr</p></li>
+              <li><p>Fax: 0254033267</p></li>
+              <li><p>Tel: +33 2 54 03 32 61</p></li>
+              <li><p>Centre de Congrès "Champs Élysées"</p></li>
+              <li><p>Boulevard Roosevelt</p></li>
+              <li><p>BP 150</p></li>
+              <li><p>36105 Issoudun</p></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+              <li><a href="https://www.biptv.tv/">Bip TV</a></li>
+              <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+              <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+              <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+          </ul>
+      </div>
     </footer>
-    <script src="../scripts/slider.js"></script> 
+    <script src="../scripts/slider.js"></script>
   </body>
 </html>
