--- a/pages/amphitheatre.html
+++ b/pages/amphitheatre.html
@@ -44,7 +44,7 @@
             <button id="nextBtn"></button>
             <div class="carousel-slide">
                 <img src="../images/amphi/amphi9.jpg" id="lastClone" alt="Amphithéâtre"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
-                <img src="../images/amphi/amphi1.jpg" alt="Amphithéâtre"> 
+                <img src="../images/amphi/amphi1.jpg" alt="Amphithéâtre">
                 <img src="../images/amphi/amphi2.jpg" alt="Amphithéâtre">
                 <img src="../images/amphi/amphi3.jpg" alt="Amphithéâtre"> <!-- Ne pas oublier de changer SRC enfonction de la position de ce fichier et du dossier de référence -->
                 <img src="../images/amphi/amphi4.jpg" alt="Amphithéâtre">
@@ -70,7 +70,7 @@
                 <p>
                   350 places en gradin
                 </p>
-              </div> 
+              </div>
             </div>
             <!-- TAILLE -->
             <div class="specs">
@@ -81,7 +81,7 @@
                 <p>
                     11,5 x 6,4 x 0,8 mètres
                 </p>
-              </div> 
+              </div>
             </div>
           <div class="info">
             <p>
@@ -98,11 +98,36 @@
             <a href="/pages/book.html">RÉSERVEZ</a>
           </div>
         </div>
-      </div>  
+      </div>
     </main>
     <footer>
-
+      <div>
+          <ul>
+              <li class="titre"><h3>Contacts</h3></li>
+              <li><p>congres@issoudun.fr</p></li>
+              <li><p>Fax: 0254033267</p></li>
+              <li><p>Tel: +33 2 54 03 32 61</p></li>
+              <li><p>Centre de Congrès "Champs Élysées"</p></li>
+              <li><p>Boulevard Roosevelt</p></li>
+              <li><p>BP 150</p></li>
+              <li><p>36105 Issoudun</p></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+              <li><a href="https://www.biptv.tv/">Bip TV</a></li>
+              <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+              <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+              <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+          </ul>
+      </div>
     </footer>
-    <script src="../scripts/slider.js"></script> 
+    <script src="../scripts/slider.js"></script>
   </body>
 </html>
