responsive home page

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
         <div class="cinema">
           <img class="cinema" src="images/cinema/cinema.png" alt="cinema">
           <section class="inside">
-            <img class="logo" src="images/cinema/logo.png" alt="logo Cinéma Champs Elysées">
+            <img class="logoCine" src="images/cinema/logo.png" alt="logo Cinéma Champs Elysées">
             <div class="cineText">
-              <h2>Un voyage. Des émotions. Vos cinémas !</h2>
+              <h2>Un voyage. Des émotions. <br>Vos cinémas !</h2>
               <p>3 salles de cinéma pour retrouver vos films préférés</p>
               <a href="https://cinemaelysees.com/">ACCÉDER AU SITE</a>
             </section>
