--- a/pages/EspaceNumerique.html
+++ b/pages/EspaceNumerique.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8"/>
-    <title>Centre de Congrès - Espace Numérique</title>
+    <title>Centre de Congrès Champs-Élysées</title>
     <meta name="description" content="Centre de congrès de la mairie d'Issoudun"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
