--- a/pages/legalnotice.html
+++ b/pages/legalnotice.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8"/>
-    <title>Titre de ma page</title>
+    <title>Centre de Congrès Champs-Élysées</title>
     <meta name="description" contents="description" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
