--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <section class="inside">
             <img class="logoCine" src="images/cinema/logo.png" alt="logo Cinéma Champs Elysées">
             <div class="cineText">
-              <h2>Un voyage. Des émotions. <br>Vos cinémas !</h2>
+              <h2>Un voyage. Des émotions. Vos cinémas !</h2>
               <p>3 salles de cinéma pour retrouver vos films préférés</p>
               <a class="hvr-pop" href="https://cinemaelysees.com/">ACCÉDER AU SITE</a>
             </section>
