--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <a class="logo" href="index.html">Centre de Congrès</a>
         <ul class="nav-links">
-          <li>
+          <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
               <ul class="submenu">
                   <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
@@ -24,7 +24,7 @@
                   <li><a href="pages/HallDaccueil.html">Hall d'accueil</a></li>
               </ul>
           </li>
-          <li><a class="book-not-displayed" href="pages/book.html">Réserver</a></li>
+          <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
           <li><a href="pages/contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
