--- a/pages/legalnotice.html
+++ b/pages/legalnotice.html
@@ -18,7 +18,7 @@
       <nav>
         <a class="logo" href="../index.html">Centre de Congrès</a>
         <ul class="nav-links">
-          <li>
+          <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
               <ul class="submenu">
                   <li><a href="amphitheatre.html">Amphithéâtre</a></li>
@@ -28,7 +28,7 @@
                   <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
               </ul>
           </li>
-          <li><a href="book.html">Réserver</a></li>
+          <li id="book-not-displayed"><a href="book.html">Réserver</a></li>
           <li><a href="contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
