--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <h3>600</h3>
                 </div>
                 <div class="button">
-                  <a href="#">RÉSERVER</a>
+                  <a href="pages/SalleDeReception.html">RÉSERVER</a>
                 </div>
                 </div>
               </div>
@@ -83,7 +83,7 @@
                   <h3>Scène</h3>
                 </div>
                 <div id="amphi" class="button">
-                  <a href="#">RÉSERVER</a>
+                  <a href="pages/amphitheatre.html">RÉSERVER</a>
                 </div>
                 </div>
               </div>
@@ -104,7 +104,7 @@
                   <h3>Lumière naturelle</h3>
                 </div>
                 <div id="hallAcc" class="button">
-                  <a href="#">RÉSERVER</a>
+                  <a href="pages/HalleDaccueil.html">RÉSERVER</a>
                 </div>
                 </div>
               </div>
@@ -135,7 +135,7 @@
                   <h3>Accès Internet</h3>
                 </div>
                 <div class="button">
-                  <a href="#">RÉSERVER</a>
+                  <a href="pages/EspaceNumerique.html">RÉSERVER</a>
                 </div>
               </div>
             </div>
@@ -145,14 +145,14 @@
               <img src="images\SallesDeReunion\reunion5.jpg" alt="Hall de réunion">
             </div>
             <div class="cardRightPart">
-              <h2>HALL DE RÉUNION</h2>
+              <h2>SALLES DE RÉUNIONS</h2>
                 <div class="iconText">
                   <div class="icon">
                     <img src="icons/Personnes.svg" alt="personnes">
                     <h3>20-50</h3>
                   </div>
                   <div class="button">
-                    <a href="#">RÉSERVER</a>
+                    <a href="pages/SallesDeReunion.html">RÉSERVER</a>
                   </div>
                 </div>
               </div>
@@ -162,7 +162,7 @@
         <div class="cinema">
           <img class="cinema" src="images/cinema/cinema.png" alt="cinema">
           <section class="inside">
-            <img class="logo" src="images/cinema/logo.png" alt="logo Cinéma Champs Elysées">
+            <img class="logoCine" src="images/cinema/logo.png" alt="logo Cinéma Champs Elysées">
             <div class="cineText">
               <h2>Un voyage. Des émotions. Vos cinémas !</h2>
               <p>3 salles de cinéma pour retrouver vos films préférés</p>
@@ -181,7 +181,7 @@
           </div>
           <iframe class="fb" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FCDCIssoudun%2F%3Fref%3Dbr_rs&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
           <div class="button2 hvr-grow">
-            <a href="#">NOUS CONTACTER</a>
+            <a href="pages/contacts.html">NOUS CONTACTER</a>
           </div>
         </div>
       </main>
