--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="description de ma page">
     <link href="styles/hover-min.css" rel="stylesheet">
+    <link rel="icon" href="icons/logoC.png" />
     <link rel="stylesheet" href="styles/card.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/footer.css">
