--- a/pages/EspaceNumerique.html
+++ b/pages/EspaceNumerique.html
@@ -5,6 +5,7 @@
     <title>Centre de Congrès Champs-Élysées</title>
     <meta name="description" content="Centre de congrès de la mairie d'Issoudun"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" href="../icons/logoC.png" />
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/template.css">
     <link rel="stylesheet" href="../styles/slider.css">
