--- a/pages/legalnotice.html
+++ b/pages/legalnotice.html
@@ -5,6 +5,7 @@
     <title>Centre de Congrès Champs-Élysées</title>
     <meta name="description" contents="description" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link rel="icon" href="../icons/logoC.png" />
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/nav.css">
     <link rel="stylesheet" href="../styles/footer.css">
