Change images ratio

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="containerCard">
           <div class="card hvr-grow hvr-shadow" id="salleDeR">
             <div class="cardLeftPart">
-              <img src="images\SalleDeReception\grandeSalle8.jpg" alt="Salle de réception">
+              <img src="images\SalleDeReception\grandeSalle.jpg" alt="Salle de réception">
             </div>
             <div class="cardRightPart">
               <h2>SALLE DE RÉCEPTION</h2>
@@ -69,7 +69,7 @@
             </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\Amphi\amphi1.jpg" alt="Amphithéatre Pierre Selleron">
+              <img src="images\Amphi\amphi.jpg" alt="Amphithéatre Pierre Selleron">
             </div>
             <div class="cardRightPart">
               <h2>AMPHITHÉATRE PIERRE SELLERON</h2>
@@ -90,7 +90,7 @@
             </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\hall\hall4.jpg" alt="Hall d'accueil">
+              <img src="images\hall\hall.jpg" alt="Hall d'accueil">
             </div>
             <div class="cardRightPart">
               <h2>HALL D'ACCUEIL</h2>
@@ -125,7 +125,7 @@
           </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\EspaceNumerique\epn2.jpg" alt="Espace numérique">
+              <img src="images\EspaceNumerique\epn.jpg" alt="Espace numérique">
             </div>
             <div class="cardRightPart">
               <h2>ESPACES NUMÉRIQUES</h2>
@@ -142,7 +142,7 @@
           </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\SallesDeReunion\reunion5.jpg" alt="Hall de réunion">
+              <img src="images\SallesDeReunion\reunion.jpg" alt="Hall de réunion">
             </div>
             <div class="cardRightPart">
               <h2>HALL DE RÉUNION</h2>
