--- a/pages/EspaceNumerique.html
+++ b/pages/EspaceNumerique.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/template.css">
     <link rel="stylesheet" href="../styles/slider.css">
     <link rel="stylesheet" href="../styles/nav.css">
+    <link rel="stylesheet" href="../styles/footer.css">
     <script src="../scripts/nav.js"></script>
   </head>
   <body>
@@ -43,11 +44,10 @@
             <button id="prevBtn"></button>
             <button id="nextBtn"></button>
             <div class="carousel-slide">
-                <img src="../images/EspaceNumerique/epn4.jpg" id="lastClone" alt="Espace Numérique"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
+                <img src="../images/EspaceNumerique/epn3.jpg" id="lastClone" alt="Espace Numérique"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
                 <img src="../images/EspaceNumerique/epn1.jpg" alt="Espace Numérique">
                 <img src="../images/EspaceNumerique/epn2.jpg" alt="Espace Numérique">
                 <img src="../images/EspaceNumerique/epn3.jpg" alt="Espace Numérique"> <!-- Ne pas oublier de changer SRC enfonction de la position de ce fichier et du dossier de référence -->
-                <img src="../images/EspaceNumerique/epn4.jpg" alt="Espace Numérique">
                 <img src="../images/EspaceNumerique/epn1.jpg" id="firstClone" alt="Salle de reception"> <!-- METTRE UNEDEUXIEME FOIS LA PREMIERE IMAGE ICI-->
             </div>
         </div>
