--- a/pages/HallDaccueil.html
+++ b/pages/HallDaccueil.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/template.css">
     <link rel="stylesheet" href="../styles/slider.css">
     <link rel="stylesheet" href="../styles/nav.css">
+    <link rel="stylesheet" href="../styles/footer.css">
     <script src="../scripts/nav.js"></script>
   </head>
   <body>
