--- a/pages/amphitheatre.html
+++ b/pages/amphitheatre.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/template.css">
     <link rel="stylesheet" href="../styles/slider.css">
     <link rel="stylesheet" href="../styles/nav.css">
+    <link rel="stylesheet" href="../styles/footer.css">
     <script src="../scripts/nav.js"></script>
   </head>
   <body>
@@ -43,16 +44,13 @@
             <button id="prevBtn"></button>
             <button id="nextBtn"></button>
             <div class="carousel-slide">
-                <img src="../images/amphi/amphi9.jpg" id="lastClone" alt="Amphithéâtre"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
+                <img src="../images/amphi/amphi6.jpg" id="lastClone" alt="Amphithéâtre"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
                 <img src="../images/amphi/amphi1.jpg" alt="Amphithéâtre">
                 <img src="../images/amphi/amphi2.jpg" alt="Amphithéâtre">
                 <img src="../images/amphi/amphi3.jpg" alt="Amphithéâtre"> <!-- Ne pas oublier de changer SRC enfonction de la position de ce fichier et du dossier de référence -->
                 <img src="../images/amphi/amphi4.jpg" alt="Amphithéâtre">
                 <img src="../images/amphi/amphi5.jpg" alt="Amphithéâtre">
                 <img src="../images/amphi/amphi6.jpg" alt="Amphithéâtre">
-                <img src="../images/amphi/amphi7.jpg" alt="Amphithéâtre">
-                <img src="../images/amphi/amphi8.jpg" alt="Amphithéâtre">
-                <img src="../images/amphi/amphi9.jpg" alt="Amphithéâtre">
                 <img src="../images/amphi/amphi1.jpg" id="firstClone" alt="Amphithéâtre"> <!-- METTRE UNEDEUXIEME FOIS LA PREMIERE IMAGE ICI-->
             </div>
         </div>
