--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <h3>600</h3>
                 </div>
                 <div class="button">
-                  <a href="#">RÉSERVER</a>
+                  <a href="pages/SalleDeReception.html">RÉSERVER</a>
                 </div>
                 </div>
               </div>
@@ -83,7 +83,7 @@
                   <h3>Scène</h3>
                 </div>
                 <div id="amphi" class="button">
-                  <a href="#">RÉSERVER</a>
+                  <a href="pages/amphitheatre.html">RÉSERVER</a>
                 </div>
                 </div>
               </div>
@@ -104,7 +104,7 @@
                   <h3>Lumière naturelle</h3>
                 </div>
                 <div id="hallAcc" class="button">
-                  <a href="#">RÉSERVER</a>
+                  <a href="pages/HallDAccueil.html">RÉSERVER</a>
                 </div>
                 </div>
               </div>
@@ -128,14 +128,14 @@
               <img src="images\EspaceNumerique\epn2.jpg" alt="Espace numérique">
             </div>
             <div class="cardRightPart">
-              <h2>ESPACES NUMÉRIQUES</h2>
+              <h2>ESPACE NUMÉRIQUE</h2>
               <div class="iconText">
                 <div class="icon" id="wifiSize">
                   <img src="icons/Internet.svg" alt="personnes">
                   <h3>Accès Internet</h3>
                 </div>
                 <div class="button">
-                  <a href="#">RÉSERVER</a>
+                  <a href="pages/EspaceNumerique.html">RÉSERVER</a>
                 </div>
               </div>
             </div>
@@ -145,14 +145,14 @@
               <img src="images\SallesDeReunion\reunion5.jpg" alt="Hall de réunion">
             </div>
             <div class="cardRightPart">
-              <h2>HALL DE RÉUNION</h2>
+              <h2>SALLES DE RÉUNION</h2>
                 <div class="iconText">
                   <div class="icon">
                     <img src="icons/Personnes.svg" alt="personnes">
                     <h3>20-50</h3>
                   </div>
                   <div class="button">
-                    <a href="#">RÉSERVER</a>
+                    <a href="pages/SalleDeReunion.html">RÉSERVER</a>
                   </div>
                 </div>
               </div>
