Added svg to reception page

--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -86,8 +86,8 @@
             </div>
             <!-- SCÈNE -->
             <div class="specs">
-              <div class="objects">
-                <img src="../icons/Scène.svg">
+              <div class="objects" id="sceneSize">
+                <img src="../icons/spotlight.svg">
               </div>
               <div class="objects">
                 <p>
