Added arrow to slider and fixes

--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -122,7 +122,7 @@
               Espace d’accueil indépendant avec banque d’accueil et vestiaires.
             </p>
             <p>
-              Coursives, fumoir, accès direct au jardin Pierre Mendès France.
+              Coursives, fumoir, accès direct au jardin.
             </p>
             <p>
               Salle modulable, sonorisée, parquet au sol.
