--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="containerCard">
           <div class="card hvr-grow hvr-shadow" id="salleDeR">
             <div class="cardLeftPart">
-              <img src="images\SalleDeReception\grandeSalle.jpg" alt="Salle de réception">
+              <img src="images/SalleDeReception/grandeSalle.JPG" alt="Salle de réception">
             </div>
             <div class="cardRightPart">
               <h2>SALLE DE RÉCEPTION</h2>
@@ -70,7 +70,7 @@
             </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\Amphi\amphi.jpg" alt="Amphithéatre Pierre Selleron">
+              <img src="images/amphi/amphi.jpg" alt="Amphithéatre Pierre Selleron">
             </div>
             <div class="cardRightPart">
               <h2>AMPHITHÉATRE PIERRE SELLERON</h2>
@@ -91,7 +91,7 @@
             </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\hall\hall.jpg" alt="Hall d'accueil">
+              <img src="images/hall/hall.JPG" alt="Hall d'accueil">
             </div>
             <div class="cardRightPart">
               <h2>HALL D'ACCUEIL</h2>
