Delete useless files and adjust height items in some pages

--- a/pages/EspaceNumerique.html
+++ b/pages/EspaceNumerique.html
@@ -52,7 +52,7 @@
             </div>
         </div>
       </div>
-      <div class="presentation">
+      <div class="presentation" id="epn">
         <div class="fiche">
           <h2>ESPACE NUMÉRIQUE</h2>
           <div class="features">
