--- a/pages/HallDaccueil.html
+++ b/pages/HallDaccueil.html
@@ -57,7 +57,7 @@
             </div>
         </div>
       </div>
-      <div class="presentation">
+      <div class="presentation" id="hall">
         <div class="fiche">
           <h2>HALL D'ACCUEIL</h2>
           <div class="features">
