--- a/pages/SalleDeReunion.html
+++ b/pages/SalleDeReunion.html
@@ -55,7 +55,7 @@
             </div>
         </div>
       </div>
-      <div class="presentation">
+      <div class="presentation" id="reu">
         <div class="fiche">
           <h2>SALLES DE RÉUNIONS</h2>
           <div class="features">
