--- a/pages/amphitheatre.html
+++ b/pages/amphitheatre.html
@@ -55,7 +55,7 @@
             </div>
         </div>
       </div>
-      <div class="presentation">
+      <div class="presentation" id="amphi">
         <div class="fiche">
           <h2>AMPHITHÉÂTRE PIERRE SELLERON</h2>
           <div class="features">
