--- a/pages/sent.html
+++ b/pages/sent.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/book.css">
     <link rel="stylesheet" href="../styles/nav.css">
+    <link rel="stylesheet" href="../styles/footer.css">
   </head>
   <body class="container">
     <header>
-      
+
     </header>
     <main class="container sent">
       <p>Votre demande a bien été envoyée.</p>
