--- a/pages/sent.html
+++ b/pages/sent.html
@@ -13,7 +13,28 @@
   </head>
   <body class="container">
     <header>
-
+      <nav>
+        <a class="logo" href="index.html">Centre de Congrès</a>
+        <ul class="nav-links">
+          <li class="make-disappear">
+              <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
+              <ul class="submenu">
+                  <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
+                  <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
+                  <li><a href="pages/SalleDeReception.html">Salle de réception</a></li>
+                  <li><a href="pages/SalleDeReunion.html">Salle de réunion</a></li>
+                  <li><a href="pages/HallDaccueil.html">Hall d'accueil</a></li>
+              </ul>
+          </li>
+          <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
+          <li><a href="pages/contacts.html">Nous contacter</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+      </nav>
     </header>
     <main class="container sent">
       <p>Votre demande a bien été envoyée.</p>
