--- a/pages/sent.html
+++ b/pages/sent.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="icon" href="../icons/logoC.png" />
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/book.css">
+    <link rel="stylesheet" href="../styles/sent.css">
     <link rel="stylesheet" href="../styles/nav.css">
     <link rel="stylesheet" href="../styles/footer.css">
   </head>
@@ -36,9 +36,11 @@
         </div>
       </nav>
     </header>
-    <main class="container sent">
-      <p>Votre demande a bien été envoyée.</p>
-      <a class="backToMain" href="../index.html">Retourner à la page d'accueil</a>
+    <main class="MainContainer">
+      <div class="sent">
+        <p>Votre demande a bien été envoyée.</p>
+        <a class="backToMain" href="../index.html">Retourner à la page d'accueil</a>
+      </div>
     </main>
     <footer>
       <div>
