--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
     </header>
     <main class="MainContainer">
-      <img class="CdC" src="images/CDC exterieur/background1.png" alt="Centre de Congrès">
+      <img class="CdC" src="images/CDC exterieur/background.jpg" alt="Centre de Congrès">
       <div class="container-home">
         <div class="presentation">
           <img src="images/CDC exterieur/cdcJardins.jpg" alt="cdcJardins">
