fix to icon in html

--- a/pages/amphitheatre.html
+++ b/pages/amphitheatre.html
@@ -72,7 +72,7 @@
             </div>
             <!-- TAILLE -->
             <div class="specs">
-              <div class="objects">
+              <div class="objects" id="regle">
                 <img src="../icons/Règle.svg">
               </div>
               <div class="objects">
