--- a/pages/HallDaccueil.html
+++ b/pages/HallDaccueil.html
@@ -63,7 +63,7 @@
           <div class="features">
               <!-- TAILLE -->
             <div class="specs">
-              <div class="objects">
+              <div class="objects" id="regle">
                 <img src="../icons/Règle.svg">
               </div>
               <div class="objects">
