--- a/pages/HallDaccueil.html
+++ b/pages/HallDaccueil.html
@@ -64,7 +64,7 @@
               <!-- TAILLE -->
             <div class="specs">
               <div class="objects" id="regle">
-                <img src="../icons/Règle.svg">
+                <img src="../icons/Regle.svg">
               </div>
               <div class="objects">
                 <p>
