--- a/index.html
+++ b/index.html
@@ -202,15 +202,15 @@
         <div>
           <ul>
             <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
-            <li><a href="#">Bip TV</a></li>
-            <li><a href="#">Centre culturel Albert Camus</a></li>
-            <li><a href="#">Musée de l'hospice Saint Roch</a></li>
-            <li><a href="#">Ville d'Issoudun</a></li>
+            <li><a href=" https://www.biptv.tv/">Bip TV</a></li>
+            <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+            <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+            <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
           </ul>
         </div>
         <div>
           <ul>
-            <li><h3><a class="titre" href="#">Mentions légales</a></h3></li>
+            <li><h3><a class="titre" href="pages/legalnotice.html">Mentions légales</a></h3></li>
           </ul>
         </div>
       </footer>
