--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="description de ma page">
+    <meta name="Centre de Congrès Champs Elysées Issoudun" content="Centre de Congrès Issoudun">
     <link href="styles/hover-min.css" rel="stylesheet">
     <link rel="icon" href="icons/logoC.png" />
     <link rel="stylesheet" href="styles/card.css">
@@ -36,10 +36,10 @@
       </nav>
     </header>
     <main class="MainContainer">
-      <img class="CdC" src="images/CDC exterieur/background.jpg" alt="Centre de Congrès">
+      <img class="CdC" src="images/CDCexterieur/background.jpg" alt="Centre de Congrès">
       <div class="container-home">
         <div class="presentation">
-          <img src="images/CDC exterieur/cdcJardins.jpg" alt="cdcJardins">
+          <img src="images/CDCexterieur/cdcJardins.jpg" alt="cdcJardins">
           <div class="orangeP">
             <p>
               Un centre à la confluence de plusieurs univers : l’économie, les loisirs, la culture, les technologies de la communication et le festif.
@@ -112,7 +112,7 @@
             </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\cuisines professionnelles\cuisines2.jpg" alt="Cuisines Professionelles">
+              <img src="images/cuisinesprofessionnelles/cuisines2.jpg" alt="Cuisines Professionelles">
             </div>
             <div class="cardRightPart">
               <h2>CUISINES PROFESSIONELLES</h2>
@@ -126,7 +126,7 @@
           </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\EspaceNumerique\epn.jpg" alt="Espace numérique">
+              <img src="images/EspaceNumerique/epn.jpg" alt="Espace numérique">
             </div>
             <div class="cardRightPart">
               <h2>ESPACE NUMÉRIQUE</h2>
@@ -143,7 +143,7 @@
           </div>
           <div class="card hvr-grow hvr-shadow">
             <div class="cardLeftPart">
-              <img src="images\SallesDeReunion\reunion.jpg" alt="Hall de réunion">
+              <img src="images/SallesDeReunion/reunion.jpg" alt="Hall de réunion">
             </div>
             <div class="cardRightPart">
               <h2>SALLES DE RÉUNION</h2>
@@ -166,10 +166,12 @@
             <img class="logoCine" src="images/cinema/logo.png" alt="logo Cinéma Champs Elysées">
             <div class="cineText">
               <h2>Un voyage. Des émotions. Vos cinémas !</h2>
-              <p>3 salles de cinéma pour retrouver vos films préférés</p>
+              <p>
+                3 salles de cinéma pour retrouver vos films préférés
+              </p>
               <a class="hvr-pop" href="https://cinemaelysees.com/">ACCÉDER AU SITE</a>
-            </section>
-          </div>
+            </div>
+          </section>
         </div>
         <div class="container-home">
           <div class="Facebook">
@@ -177,7 +179,9 @@
               <h3>SUIVEZ NOTRE ACTUALITÉ</h3>
             </div>
             <div class="text">
-              <p>Pour suivre l’actualité du Centre de Congrès, retrouvez nos différents évènements sur Facebook.</p>
+              <p>
+                Pour suivre l’actualité du Centre de Congrès, retrouvez nos différents évènements sur Facebook.
+              </p>
             </div>
           </div>
           <iframe class="fb" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FCDCIssoudun%2F%3Fref%3Dbr_rs&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
