--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -68,7 +68,7 @@
               </div>
               <div class="objects">
                 <p>
-                  765
+                  600
                 </p>
               </div>
             </div>
@@ -79,7 +79,7 @@
               </div>
               <div class="objects">
                 <p>
-                  775 mètres carrés (Scène : 8 x 5 x 0,8 mètres)
+                  765 mètres carrés (Scène : 8 x 5 x 0,8 mètres)
                 </p>
               </div>
             </div>
@@ -143,6 +143,9 @@
             </p>
             <p>
                 Monte-charge
+            </p>
+            <p>
+                Contactez nous pour connaître la capacité d'accueil maximale en repas.
             </p>
           </div>
           <div class="button">
