--- a/pages/sent.html
+++ b/pages/sent.html
@@ -47,8 +47,7 @@
           <ul>
               <li class="titre"><h3>Contacts</h3></li>
               <li><p>congres@issoudun.fr</p></li>
-              <li><p>Fax: 0254033267</p></li>
-              <li><p>Tel: +33 2 54 03 32 61</p></li>
+              <li><p>Tel: 02 54 03 32 68</p></li>
               <li><p>Centre de Congrès "Champs Élysées"</p></li>
               <li><p>Boulevard Roosevelt</p></li>
               <li><p>BP 150</p></li>
