--- a/pages/EspaceNumerique.html
+++ b/pages/EspaceNumerique.html
@@ -95,7 +95,7 @@
                 Espace de consultation et de formation
             </p>
             <p>
-                Logiciels de bureautique et de gestion, salle de formation.
+                Location : logiciels de bureautique et de gestion, salle de formation.
             </p>
             <p>
               Salle modulable, sonorisée, parquet au sol.
