Nav Congrès Issoudun

--- a/pages/sent.html
+++ b/pages/sent.html
@@ -14,7 +14,7 @@
   <body class="container">
     <header>
       <nav>
-        <a class="logo" href="index.html">Centre de Congrès</a>
+        <a class="logo" href="../index.html">Congrès Issoudun</a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
