--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="index.html">Centre de Congrès</a>
+        <a class="logo" href="index.html">Congrès Issoudun</a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
