--- a/pages/HallDaccueil.html
+++ b/pages/HallDaccueil.html
@@ -102,7 +102,7 @@
             </p>
           </div>
           <div class="button">
-            <a href="/pages/book.html">RÉSERVEZ</a>
+            <a href="/pages/book.html">RÉSERVER</a>
           </div>
         </div>
       </div>
