--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -149,7 +149,7 @@
             </p>
           </div>
           <div class="button">
-            <a href="/pages/book.html">RÉSERVEZ</a>
+            <a href="/pages/book.html">RÉSERVER</a>
           </div>
         </div>
       </div>
