--- a/pages/SalleDeReunion.html
+++ b/pages/SalleDeReunion.html
@@ -96,7 +96,7 @@
             </ul>
           </div>
           <div class="button">
-            <a href="/pages/book.html">RÉSERVEZ</a>
+            <a href="/pages/book.html">RÉSERVER</a>
           </div>
         </div>
       </div>
