--- a/pages/EspaceNumerique.html
+++ b/pages/EspaceNumerique.html
@@ -108,7 +108,7 @@
             </p>
           </div>
           <div class="button">
-            <a href="/pages/book.html">RÉSERVEZ</a>
+            <a href="/pages/book.html">RÉSERVER</a>
           </div>
         </div>
       </div>
