--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
       </nav>
     </header>
     <main class="MainContainer">
-      <img class="CdC" src="images/CDCexterieur/background.jpg" alt="Centre de Congrès">
+      <div class="hero">
+        <img class="CdC" src="images/Hero.svg" alt="Centre de Congrès Champs Élysées" />
+      </div>
       <div class="container-home">
         <div class="presentation">
           <img src="images/CDCexterieur/cdcJardins.jpg" alt="cdcJardins">
