--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -79,7 +79,7 @@
               </div>
               <div class="objects">
                 <p>
-                  765 mètres carrés (Scène : 8 x 5 x 0,8 mètres)
+                  765 mètres carrés
                 </p>
               </div>
             </div>
