--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <main class="MainContainer">
       <div class="hero">
         <img class="CdC" src="images/Hero.svg" alt="Centre de Congrès Champs Élysées" />
+        <div class="scroll-down"></div>
       </div>
       <div class="container-home">
         <div class="presentation">
