added link legalnotice(salleDeReception)

--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -178,7 +178,7 @@
       </div>
       <div>
         <ul>
-          <li><h3><a class="titre" href="pages/legalnotice.html">Mentions légales</a></h3></li>
+          <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
         </ul>
       </div>
     </footer>
