--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="Centre de Congrès Champs Elysées Issoudun" content="Centre de Congrès Issoudun">
     <link href="styles/hover-min.css" rel="stylesheet">
     <link rel="icon" href="icons/logoC.png" />
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/card.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/footer.css">
@@ -22,7 +23,7 @@
                   <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
                   <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
                   <li><a href="pages/SalleDeReception.html">Salle de réception</a></li>
-                  <li><a href="pages/SalleDeReunion.html">Salle de réunion</a></li>
+                  <li><a href="pages/SalleDeReunion.html">Salles de réunion</a></li>
                   <li><a href="pages/HallDaccueil.html">Hall d'accueil</a></li>
               </ul>
           </li>
@@ -119,7 +120,7 @@
               <img src="images/cuisinesprofessionnelles/cuisines2.jpg" alt="Cuisines Professionelles">
             </div>
             <div class="cardRightPart">
-              <h2>CUISINES PROFESSIONELLES</h2>
+              <h2>CUISINES PROFESSIONNELLES</h2>
               <div class="iconText">
                 <div class="icon" id="forkSize">
                   <img src="icons/Fourchette.svg" alt="fourchette">
@@ -209,6 +210,7 @@
         <div>
           <ul>
             <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+            <li><a href="https://cinemaelysees.com/">Cinéma Les Élysées</a></li>
             <li><a href=" https://www.biptv.tv/">Bip TV</a></li>
             <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
             <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
