--- a/nav.html
+++ b/nav.html
@@ -9,28 +9,28 @@
     <title>Nav Bar</title>
 </head>
 <body>
-    <nav>
-        <a class="logo" href="../index.html">Centre de Congrès</a>
-        <ul class="nav-links">
-          <li>
-              <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
-              <ul class="submenu">
-                  <li><a href="amphitheatre.html">Amphithéâtre</a></li>
-                  <li><a href="EspaceNumerique.html">Espace numérique</a></li>
-                  <li><a href="SalleDeReception.html">Salle de réception</a></li>
-                  <li><a href="SalleDeReunion.html">Salle de réunion</a></li>
-                  <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
-              </ul>
-          </li>
-          <li><a href="book.html">Réserver</a></li>
-          <li><a href="contacts.html">Nous contacter</a></li>
-        </ul>
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </nav>
+  <nav>
+    <a class="logo" href="index.html">Congrès Issoudun</a>
+    <ul class="nav-links">
+      <li class="make-disappear">
+          <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
+          <ul class="submenu">
+              <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
+              <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
+              <li><a href="pages/SalleDeReception.html">Salle de réception</a></li>
+              <li><a href="pages/SalleDeReunion.html">Salles de réunion</a></li>
+              <li><a href="pages/HallDaccueil.html">Hall d'accueil</a></li>
+          </ul>
+      </li>
+      <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
+      <li><a href="pages/contacts.html">Nous contacter</a></li>
+    </ul>
+    <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+  </nav>
     <script src="scripts/nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
 </body>
 </html>
