--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -15,20 +15,20 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="../index.html">Congrès Issoudun</a>
+        <a class="logo" href="index.html">Congrès Issoudun</a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
               <ul class="submenu">
-                  <li><a href="amphitheatre.html">Amphithéâtre</a></li>
-                  <li><a href="EspaceNumerique.html">Espace numérique</a></li>
-                  <li><a href="SalleDeReception.html">Salle de réception</a></li>
-                  <li><a href="SalleDeReunion.html">Salle de réunion</a></li>
-                  <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
+                  <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
+                  <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
+                  <li><a href="pages/SalleDeReception.html">Salle de réception</a></li>
+                  <li><a href="pages/SalleDeReunion.html">Salles de réunion</a></li>
+                  <li><a href="pages/HallDaccueil.html">Hall d'accueil</a></li>
               </ul>
           </li>
-          <li id="book-not-displayed"><a href="book.html">Réserver</a></li>
-          <li><a href="contacts.html">Nous contacter</a></li>
+          <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
+          <li><a href="pages/contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -170,6 +170,7 @@
       <div>
         <ul>
           <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+          <li><a href="https://cinemaelysees.com/">Cinéma Les Élysées</a></li>
           <li><a href=" https://www.biptv.tv/">Bip TV</a></li>
           <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
           <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
@@ -178,7 +179,7 @@
       </div>
       <div>
         <ul>
-          <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+          <li><h3><a class="titre" href="pages/legalnotice.html">Mentions légales</a></h3></li>
         </ul>
       </div>
     </footer>
