--- a/pages/sent.html
+++ b/pages/sent.html
@@ -14,7 +14,7 @@
   <body class="container">
     <header>
       <nav>
-        <a class="logo" href="../index.html">Congrès Issoudun</a>
+        <a class="logo" href="index.html">Congrès Issoudun</a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
@@ -22,7 +22,7 @@
                   <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
                   <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
                   <li><a href="pages/SalleDeReception.html">Salle de réception</a></li>
-                  <li><a href="pages/SalleDeReunion.html">Salle de réunion</a></li>
+                  <li><a href="pages/SalleDeReunion.html">Salles de réunion</a></li>
                   <li><a href="pages/HallDaccueil.html">Hall d'accueil</a></li>
               </ul>
           </li>
@@ -44,29 +44,31 @@
     </main>
     <footer>
       <div>
-          <ul>
-              <li class="titre"><h3>Contacts</h3></li>
-              <li><p>congres@issoudun.fr</p></li>
-              <li><p>Tel: 02 54 03 32 68</p></li>
-              <li><p>Centre de Congrès "Champs Élysées"</p></li>
-              <li><p>Boulevard Roosevelt</p></li>
-              <li><p>BP 150</p></li>
-              <li><p>36105 Issoudun</p></li>
-          </ul>
+        <ul>
+          <li class="titre"><h3>Contacts</h3></li>
+          <li><p>congres@issoudun.fr</p></li>
+          <li><p>Fax: 0254033267</p></li>
+          <li><p>Tel: +33 2 54 03 32 61</p></li>
+          <li><p>Centre de Congrès "Champs Élysées"</p></li>
+          <li><p>Boulevard Roosevelt</p></li>
+          <li><p>BP 150</p></li>
+          <li><p>36105 Issoudun</p></li>
+        </ul>
       </div>
       <div>
-          <ul>
-              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
-              <li><a href="https://www.biptv.tv/">Bip TV</a></li>
-              <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
-              <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
-              <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
-          </ul>
+        <ul>
+          <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+          <li><a href="https://cinemaelysees.com/">Cinéma Les Élysées</a></li>
+          <li><a href=" https://www.biptv.tv/">Bip TV</a></li>
+          <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
+          <li><a href="https://www.museeissoudun.tv/">Musée de l'hospice Saint Roch</a></li>
+          <li><a href="http://www.issoudun.fr/">Ville d'Issoudun</a></li>
+        </ul>
       </div>
       <div>
-          <ul>
-              <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
-          </ul>
+        <ul>
+          <li><h3><a class="titre" href="pages/legalnotice.html">Mentions légales</a></h3></li>
+        </ul>
       </div>
     </footer>
     <script src="../scripts/nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
