--- a/pages/legalnotice.html
+++ b/pages/legalnotice.html
@@ -21,15 +21,15 @@
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
               <ul class="submenu">
-                  <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
-                  <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
-                  <li><a href="pages/SalleDeReception.html">Salle de réception</a></li>
-                  <li><a href="pages/SalleDeReunion.html">Salles de réunion</a></li>
-                  <li><a href="pages/HallDaccueil.html">Hall d'accueil</a></li>
+                  <li><a href="amphitheatre.html">Amphithéâtre</a></li>
+                  <li><a href="EspaceNumerique.html">Espace numérique</a></li>
+                  <li><a href="SalleDeReception.html">Salle de réception</a></li>
+                  <li><a href="SalleDeReunion.html">Salles de réunion</a></li>
+                  <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
               </ul>
           </li>
-          <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
-          <li><a href="pages/contacts.html">Nous contacter</a></li>
+          <li id="book-not-displayed"><a href="book.html">Réserver</a></li>
+          <li><a href="contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
