--- a/pages/legalnotice.html
+++ b/pages/legalnotice.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>Centre de Congrès Champs-Élysées</title>
     <meta name="description" contents="description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="icon" href="../icons/logoC.png" />
     <link rel="stylesheet" href="../styles/main.css">
