--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <main class="MainContainer">
       <div class="hero">
         <img class="CdC" src="images/Hero.svg" alt="Centre de Congrès Champs Élysées" />
-        <div class="scroll-down"></div>
+        <button class="btn">
+            <div class="scroll-down"></div>
+        </button>
       </div>
       <div class="container-home">
         <div class="presentation">
