--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -10,13 +10,11 @@
     <link rel="stylesheet" href="../styles/contacts.css">
     <link rel="stylesheet" href="../styles/nav.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <script src="scripts/main.js">
-    </script>
   </head>
   <body>
     <header>
       <nav>
-        <a class="logo" href="index.html">Congrès Issoudun</a>
+        <a class="logo" href="../index.html">Congrès Issoudun</a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
@@ -115,5 +113,6 @@
   </footer>
   <script src="../scripts/nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
   <script src="nav.js"></script>
+  <script> src="../scripts/main.js"</script>
   </body>
 </html>
