--- a/pages/legalnotice.html
+++ b/pages/legalnotice.html
@@ -16,7 +16,7 @@
   <body>
     <head>
       <nav>
-        <a class="logo" href="index.html">Congrès Issoudun</a>
+        <a class="logo" href="../index.html">Congrès Issoudun</a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
