--- a/pages/amphitheatre.html
+++ b/pages/amphitheatre.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="index.html">Congrès Issoudun</a>
+        <a class="logo" href="../index.html">Congrès Issoudun</a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
